// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> should render properly on first page 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  background-color: #808080;
  border: none;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-1:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: not-allowed;
}

.emotion-2 {
  color: #191919;
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-3 {
  padding: 8px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background-color: #2e2e2e;
}

.emotion-4 {
  padding: 8px 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3b3b3;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  background-color: #808080;
  border: none;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-5:hover {
  opacity: 0.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-6 {
  color: #ffffff;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div
  className="emotion-0"
>
  <button
    className="emotion-1"
    disabled={true}
    type="button"
  >
    <svg
      className="emotion-2"
      data-file-name="chevron.svg"
      height={16}
    />
  </button>
  <div
    className="emotion-3"
  >
    1
  </div>
  <div
    className="emotion-4"
  >
    of 
    2
  </div>
  <a
    className="emotion-5"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs?page=2"
    onClick={[Function]}
    onMouseEnter={[Function]}
    rel="next"
  >
    <svg
      className="emotion-6"
      data-file-name="chevron.svg"
      height={16}
    />
  </a>
</div>
`;

exports[`<Pagination /> should render properly on last page 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  background-color: #808080;
  border: none;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-1:hover {
  opacity: 0.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-2 {
  color: #ffffff;
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-3 {
  padding: 8px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ffffff;
  background-color: #2e2e2e;
}

.emotion-4 {
  padding: 8px 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3b3b3;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  background-color: #808080;
  border: none;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-5:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: not-allowed;
}

.emotion-6 {
  color: #191919;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div
  className="emotion-0"
>
  <a
    className="emotion-1"
    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
    onClick={[Function]}
    onMouseEnter={[Function]}
    rel="prev"
  >
    <svg
      className="emotion-2"
      data-file-name="chevron.svg"
      height={16}
    />
  </a>
  <div
    className="emotion-3"
  >
    2
  </div>
  <div
    className="emotion-4"
  >
    of 
    2
  </div>
  <button
    className="emotion-5"
    disabled={true}
    type="button"
  >
    <svg
      className="emotion-6"
      data-file-name="chevron.svg"
      height={16}
    />
  </button>
</div>
`;
